--- a/index.html
+++ b/index.html
@@ -13,9 +13,102 @@
 
 <body>
 
-  <p>Hello, world!</p>
+	<div class="login-box">
+	  <div class="login-logo" style="font-size:18px">  
+	    <a href="#"><img src="batutLogo.png" width="100%"></a><br><br>
+
+	    <div class="centar">
+		    <a href="#"><b>Цовид-19</b> Валидација</a><br>
+		    <a href="#"><b>Covid-19</b> Validacija</a><br>
+		    <a href="#"><b>Covid-19</b> Validation</a>
+		</div>	
+	  </div>
+  <!-- /.login-logo -->
+	  <div class="login-box-body">
+	    <!-- /.social-auth-links -->
+		
+			
+		<div class="alert alert-danger" align="center">
+			Потврда ЈЕ ВАЛИДНА! <br>
+			Potvrda ЈЕ VALIDNA! <br>
+			Report IS VALID!
+		</div>
+				
+	  </div>
+  <!-- /.login-box-body -->
+	</div>
 
   <script src="js/script.js"></script>
+
+  <style>	
+  	body {
+  		background-color: #D2D6DE;
+  		font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;
+	    font-weight: 400;
+	    overflow-x: hidden;
+	    overflow-y: auto;
+	    font-size: 14px;
+	    line-height: 1.42857143;
+	    color: #333;
+  	}
+
+  	.centar {
+  		text-align: center;
+  		
+  	}
+
+  	.centar a {
+  		color: #444444;
+  		text-decoration: none;
+  	}
+
+  	.login-box, .register-box {
+	    width: 360px;
+	    margin: 7% auto;
+	}
+
+	.login-box-body {
+		background: #fff;
+	    padding: 20px;
+	    border-top: 0;
+	    color: #666;
+	    margin-top: 30px;
+	}
+
+	.alert-danger {
+		background-color: #77CE73 !important;
+		color: white;
+		padding: 15px 0;
+	}
+
+	* {
+	    -webkit-box-sizing: border-box;
+	    -moz-box-sizing: border-box;
+	    box-sizing: border-box;
+	}
+
+	div {
+	    display: block;
+	}
+	html {
+	    font-size: 10px;
+	    -webkit-tap-highlight-color: rgba(0,0,0,0);
+	    font-family: sans-serif;
+	    -webkit-text-size-adjust: 100%;
+	    -ms-text-size-adjust: 100%;
+	}
+
+	:after, :before {
+	    -webkit-box-sizing: border-box;
+	    -moz-box-sizing: border-box;
+	    box-sizing: border-box;
+	}
+	:after, :before {
+	    -webkit-box-sizing: border-box;
+	    -moz-box-sizing: border-box;
+	    box-sizing: border-box;
+	}
+  </style>
 </body>
 
 </html>
